fix: Arrow spacing

--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,6 @@ a {
 
 [class|='arrow']::after {
     font-family: 'icomoon';
-    padding-left: 8px;
     font-size: 0.65em;
 }
 
